Fix crash when running in server environment

--- a/src/main/resources/META-INF/betterportals_at.cfg
+++ b/src/main/resources/META-INF/betterportals_at.cfg
@@ -29,6 +29,10 @@ public net.minecraft.client.renderer.RenderGlobal field_174995_M #renderDispatch
 public-f net.minecraft.client.gui.GuiIngame field_184050_w #overlayBoss
 public net.minecraft.network.NetHandlerPlayServer field_184362_y #targetPos
 
+public net.minecraft.world.chunk.BlockStateContainer *
+public net.minecraft.world.chunk.BlockStatePaletteLinear field_186042_a #states
+public net.minecraft.world.chunk.BlockStatePaletteHashMap field_186046_a #statePaletteMap
+public net.minecraft.world.chunk.IBlockStatePaletteResizer
 
 public-f net.minecraft.client.renderer.GlStateManager *
 public net.minecraft.client.renderer.GlStateManager$AlphaState
