Fix epoll event loop being initialized even though epoll isn't supported

--- a/src/main/resources/META-INF/betterportals_at.cfg
+++ b/src/main/resources/META-INF/betterportals_at.cfg
@@ -28,6 +28,7 @@ public net.minecraft.client.renderer.chunk.ChunkRenderWorker func_178474_a(Lnet/
 public net.minecraft.client.renderer.RenderGlobal field_174995_M #renderDispatcher
 public-f net.minecraft.client.gui.GuiIngame field_184050_w #overlayBoss
 public net.minecraft.network.NetHandlerPlayServer field_184362_y #targetPos
+public net.minecraft.util.LazyLoadBase field_179282_b #isLoaded
 
 public net.minecraft.world.chunk.BlockStateContainer *
 public net.minecraft.world.chunk.BlockStatePaletteLinear field_186042_a #states
