--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ sourceSets {
 apply plugin: 'kotlin'
 apply plugin: 'org.spongepowered.mixin'
 
-version = "0.1"
+version = determineVersion()
 group = "de.johni0702.minecraft"
 archivesBaseName = "betterportals"
 
@@ -122,4 +122,30 @@ compileTestKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+}
+
+def determineVersion() {
+    def latestVersion = file('version.txt').readLines().first()
+    def releaseCommit = command('git', 'blame', '-p', '-l', 'version.txt').first().tokenize(' ').first()
+    def currentCommit = command('git', 'rev-parse', 'HEAD').first()
+    def version
+    if (releaseCommit == currentCommit) {
+        version = latestVersion
+    } else {
+        def diff = command('git', 'log', '--format=oneline', "$releaseCommit..$currentCommit").size()
+        version = "$latestVersion-$diff-g${currentCommit.substring(0, 7)}"
+    }
+    if (!command('git', 'status', '--porcelain').empty) {
+        version = "$version*"
+    }
+    return version
+}
+
+def command(Object...cmd) {
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine cmd
+        standardOutput = stdout
+    }
+    return stdout.toString().tokenize('\n')
 }
