Render (potentially recursive) views sequentially instead of recursively
This is a required step to support recursive portals and third
person camera.
Unfortunately, in its current form, it breaks rendering of entities
which are still on the remote side of a portal but already sticking
outside of the frame on the local side (and the other way around).

--- a/src/main/resources/META-INF/betterportals_at.cfg
+++ b/src/main/resources/META-INF/betterportals_at.cfg
@@ -10,6 +10,7 @@ public net.minecraft.client.renderer.ItemRenderer field_187472_i # prevEquippedP
 public net.minecraft.client.renderer.EntityRenderer field_78507_R # fovModifierHand
 public net.minecraft.client.renderer.EntityRenderer field_78506_S # fovModifierHandPrev
 public net.minecraft.client.renderer.EntityRenderer func_78466_h(F)V # updateFogColor
+public net.minecraft.client.renderer.EntityRenderer func_78479_a(FI)V #setupCameraTransform
 public net.minecraft.network.NetHandlerPlayServer func_184342_d()V #captureCurrentPosition
 public net.minecraft.client.network.NetHandlerPlayClient field_147300_g # clientWorldController
 public-f net.minecraft.client.network.NetHandlerPlayClient field_147302_e # netManager
