--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.2.41'
+    ext.kotlin_version = '1.3.10'
     repositories {
         jcenter()
         maven { url = "http://files.minecraftforge.net/maven" }
@@ -47,6 +47,11 @@ repositories {
         name = "CurseForge"
         url = "https://minecraft.curseforge.com/api/maven/"
     }
+    jcenter()
+    maven {
+        name = "Shadowfacts"
+        url = "https://maven.shadowfacts.net"
+    }
 }
 
 configurations {
@@ -57,7 +62,7 @@ configurations {
 dependencies {
     compile 'org.spongepowered:mixin:0.7.5-SNAPSHOT'
     compile 'the-twilight-forest:twilightforest-1.12.2:3.6.345:universal'
-    shade "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile 'net.shadowfacts:Forgelin:1.8.2'
 
     testCompile 'io.kotlintest:kotlintest-runner-junit5:3.0.4'
 }
