Fix copying of BlockStateContainers, fixes portal search (fixes #27)
Changing the second argument of the Palette constructors is unrelated
but could have made for a similarly nasty bug in the future.

--- a/src/main/resources/META-INF/betterportals_at.cfg
+++ b/src/main/resources/META-INF/betterportals_at.cfg
@@ -31,6 +31,7 @@ public net.minecraft.util.LazyLoadBase field_179282_b #isLoaded
 
 public net.minecraft.world.chunk.BlockStateContainer *
 public net.minecraft.world.chunk.BlockStatePaletteLinear field_186042_a #states
+public net.minecraft.world.chunk.BlockStatePaletteLinear field_186045_d #arraySize
 public net.minecraft.world.chunk.BlockStatePaletteHashMap field_186046_a #statePaletteMap
 public net.minecraft.world.chunk.IBlockStatePaletteResizer
 
