Replace MC's framebuffer with ours while rendering the world
This should improve compatibility with mods which need to un- and
re-bind MC's framebuffer for some reason (e.g. OF's Shaders).

--- a/src/main/resources/META-INF/betterportals_at.cfg
+++ b/src/main/resources/META-INF/betterportals_at.cfg
@@ -1,5 +1,6 @@
 public net.minecraft.client.Minecraft field_175620_Y # itemRenderer
 public net.minecraft.client.Minecraft field_175616_W # renderManager
+public net.minecraft.client.Minecraft field_147124_at # framebufferMc
 public-f net.minecraft.client.Minecraft field_152351_aB # scheduledTasks
 public net.minecraft.client.renderer.ItemRenderer field_187467_d # itemStackMainHand
 public net.minecraft.client.renderer.ItemRenderer field_187468_e # itemStackOffHand
