--- a/build.gradle
+++ b/build.gradle
@@ -114,6 +114,11 @@ compileKotlin {
         jvmTarget = "1.8"
     }
 }
+compileApiKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
 compileTestKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
