Share RenderManager between views (fixes #77)

--- a/src/main/resources/META-INF/betterportals_at.cfg
+++ b/src/main/resources/META-INF/betterportals_at.cfg
@@ -16,6 +16,7 @@ public net.minecraft.network.NetHandlerPlayServer func_184342_d()V #captureCurre
 public net.minecraft.client.network.NetHandlerPlayClient field_147300_g # clientWorldController
 public-f net.minecraft.client.network.NetHandlerPlayClient field_147302_e # netManager
 public-f net.minecraft.client.renderer.ActiveRenderInfo *
+public net.minecraft.client.renderer.entity.RenderManager *
 public net.minecraft.server.management.PlayerChunkMapEntry field_187283_c # players
 public net.minecraft.server.management.PlayerChunkMap field_72699_b # players
 public net.minecraft.entity.EntityTracker field_72793_b # entries
