Initial attempt at supporting vehicles with entities or players in them See #43
Still has a few rough edges:
- Stuff rendered on wrong side of portal for single frames
- Rotation of passengers (at least players) not properly preserved
- Sticking 3rd-person cam through portal at specific angle uses wrong view (not sure if regression)
- Some bug causing chunks to become invisible until reloaded with F3+A
- Players cannot be vehicles themselves (too complicated for too little gain)
- #75 is much more obvious for stacked entities

Also fixes an issue where World.rayTracePortals returns the wrong world
and one where the ray trace result isn't translated back into the local
world before it is passed to the third person camera positioning code.

--- a/src/main/resources/META-INF/betterportals_at.cfg
+++ b/src/main/resources/META-INF/betterportals_at.cfg
@@ -23,6 +23,7 @@ public net.minecraft.entity.EntityTracker field_72793_b # entries
 public net.minecraft.client.entity.EntityOtherPlayerMP *
 public net.minecraft.entity.player.EntityPlayerMP field_71130_g #entityRemoveQueue
 public net.minecraft.entity.EntityLivingBase field_184629_bo #ticksElytraFlying
+public net.minecraft.entity.Entity field_184239_as # ridingEntity
 public net.minecraft.entity.item.EntityMinecart field_70511_i # minecartX
 public net.minecraft.entity.item.EntityMinecart field_70509_j # minecartY
 public net.minecraft.entity.item.EntityMinecart field_70514_an # minecartZ
