--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ ext {
     mixinDep = 'org.spongepowered:mixin:0.7.11-SNAPSHOT'
     twilightforestDepBase = 'the-twilight-forest:twilightforest-1.12.2:3.6.345'
     twilightforestDep = "$twilightforestDepBase:universal"
+    mekanismDepBase = 'mekanism:Mekanism:1.12.2'
+    mekanismDep = "$mekanismDepBase:9.7.9.380" // yes, the classifier is the version (really, CF?!)...
 }
 
 version = determineVersion()
@@ -47,11 +49,16 @@ sourceSets {
         compileClasspath += sourceSets.api.compileClasspath
         compileClasspath += sourceSets.api.output
     }
+    mekanism {
+        compileClasspath += sourceSets.api.compileClasspath
+        compileClasspath += sourceSets.api.output
+    }
     main {
         compileClasspath += sourceSets.view.output
         compileClasspath += sourceSets.portal.output
         compileClasspath += sourceSets.vanilla.output
         compileClasspath += sourceSets.twilightforest.output
+        compileClasspath += sourceSets.mekanism.output
     }
 }
 
@@ -59,7 +66,7 @@ minecraft {
     // Note: For development, either uncomment the following line or manually add -Dfml.coreMods.load=de.johni0702.minecraft.betterportals.impl.MixinLoader
     //       to the jvm arguments.
     // coreMod = "de.johni0702.minecraft.betterportals.impl.MixinLoader"
-    version = "1.12.2-14.23.3.2669"
+    version = "1.12.2-14.23.5.2768"
     runDir = "run"
     mappings = "snapshot_20171003"
 }
@@ -106,6 +113,15 @@ dependencies {
     runtime "deobf.$twilightforestDepBase"
     twilightforestCompile "deobf.$twilightforestDepBase"
 
+    deobfCompile mekanismDep
+    runtime "deobf.$mekanismDepBase"
+    mekanismCompile "deobf.$mekanismDepBase"
+    // Mekanism deps (cause CF and/or FG break transitive dependencies)
+    deobfCompile 'redstone-flux:RedstoneFlux-1.12:2.1.0.6:universal'
+    mekanismCompile 'deobf.redstone-flux:RedstoneFlux-1.12:2.1.0.6'
+    deobfCompile 'industrial-craft:Industrialcraft-2-2.8.111:ex112:api'
+    mekanismCompile 'deobf.industrial-craft:Industrialcraft-2-2.8.111:ex112'
+
     testCompile 'io.kotlintest:kotlintest-runner-junit5:3.0.4'
 }
 
@@ -136,6 +152,7 @@ jar {
     from sourceSets.portal.output
     from sourceSets.vanilla.output
     from sourceSets.twilightforest.output
+    from sourceSets.mekanism.output
     exclude 'de/johni0702/minecraft/betterportals/MixinLoader.class'
     manifest {
         attributes 'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
