--- a/src/main/resources/META-INF/betterportals_at.cfg
+++ b/src/main/resources/META-INF/betterportals_at.cfg
@@ -37,6 +37,8 @@ public net.minecraft.client.renderer.RenderGlobal field_174995_M #renderDispatch
 public-f net.minecraft.client.gui.GuiIngame field_184050_w #overlayBoss
 public net.minecraft.network.NetHandlerPlayServer field_184362_y #targetPos
 public net.minecraft.util.LazyLoadBase field_179282_b #isLoaded
+public net.minecraft.client.shader.ShaderManager field_148007_m #programFilename
+public net.minecraft.client.shader.ShaderManager field_148002_c #staticShaderManager
 
 public net.minecraft.world.chunk.BlockStateContainer *
 public net.minecraft.world.chunk.BlockStatePaletteLinear field_186042_a #states
