Implement BP support for the three AbyssalCraft portals (closes #138)

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ ext {
     mekanismDep = "$mekanismDepBase:9.8.1.383" // yes, the classifier is the version (really, CF?!)...
     aetherDepBase = 'the-aether:aether_legacy:1.12.2'
     aetherDep = "$aetherDepBase:v1.4.4"
+    abyssalcraftDepBase = 'abyssalcraft:AbyssalCraft:1.12.2'
+    abyssalcraftDep = "$abyssalcraftDepBase:1.9.11"
     cubicChunksDepBase = 'opencubicchunks:CubicChunks-1.12.2-0.0.970.0:SNAPSHOT'
     cubicChunksDep = "$cubicChunksDepBase:all"
 }
@@ -65,6 +67,10 @@ sourceSets {
         compileClasspath += sourceSets.api.compileClasspath
         compileClasspath += sourceSets.api.output
     }
+    abyssalcraft {
+        compileClasspath += sourceSets.api.compileClasspath
+        compileClasspath += sourceSets.api.output
+    }
     main {
         compileClasspath += sourceSets.view.output
         compileClasspath += sourceSets.transition.output
@@ -73,6 +79,7 @@ sourceSets {
         compileClasspath += sourceSets.twilightforest.output
         compileClasspath += sourceSets.mekanism.output
         compileClasspath += sourceSets.aether.output
+        compileClasspath += sourceSets.abyssalcraft.output
     }
     integrationTest {
         compileClasspath += sourceSets.main.compileClasspath
@@ -156,6 +163,10 @@ dependencies {
     runtime "deobf.$aetherDepBase"
     aetherCompile "deobf.$aetherDepBase"
 
+    deobfCompile abyssalcraftDep
+    runtime "deobf.$abyssalcraftDepBase"
+    abyssalcraftCompile "deobf.$abyssalcraftDepBase"
+
     integrationTestCompile 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
     integrationTestCompile 'org.junit.platform:junit-platform-launcher:1.5.0'
     integrationTestCompile 'io.kotlintest:kotlintest-runner-junit5:3.4.0'
@@ -195,6 +206,7 @@ jar {
     from sourceSets.twilightforest.output
     from sourceSets.mekanism.output
     from sourceSets.aether.output
+    from sourceSets.abyssalcraft.output
     exclude 'de/johni0702/minecraft/betterportals/MixinLoader.class'
     exclude 'net/optifine' // skeletons
     exclude 'mixins.betterportals.test.refmap.json' // MixinGradle is being stupid
